--- a/.gitignore
+++ b/.gitignore
@@ -157,4 +157,7 @@ pyvenv.cfg
 pip-selfcheck.json
 
 
+.vscode/
+workspace.code-workspace
+__pycache__/*.*
 # End of https://www.gitignore.io/api/git,ninja,python,django
