--- a/requirements.txt
+++ b/requirements.txt
@@ -7,13 +7,13 @@ click==6.7
 Flask==1.0.2
 Flask-Cors==3.0.6
 Flask-RESTful==0.3.6
+Flask-SSLify==0.1.5
 gunicorn==19.9.0
 idna==2.7
 isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
 lazy-object-proxy==1.3.1
-livereload==2.5.2
 Markdown==3.0.1
 MarkupSafe==1.0
 mccabe==0.6.1
