--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,1 @@
-flask-cachebuster
-aniso8601==3.0.2
-astroid==2.0.4
-beautifulsoup4==4.6.3
-certifi==2018.8.24
-chardet==3.0.4
-click==6.7
-Flask==1.0.2
-Flask-Cors==3.0.6
-Flask-RESTful==0.3.6
-Flask-SSLify==0.1.5
-gunicorn==19.9.0
-idna==2.7
-isort==4.3.4
-itsdangerous==0.24
-Jinja2==2.10
-lazy-object-proxy==1.3.1
-Markdown==3.0.1
-MarkupSafe==1.0
-mccabe==0.6.1
-pylint==2.1.1
-pypugjs==5.7.2
-pytz==2018.5
-requests==2.19.1
-six==1.11.0
-tornado==5.1.1
-typed-ast==1.1.0
-urllib3==1.23
-Werkzeug==0.14.1
-wrapt==1.10.11
+Scrapy~=2.4.1
