--- a/.gitignore
+++ b/.gitignore
@@ -257,5 +257,5 @@ dmypy.json
 # Ignore all local history of files
 .history
 .ionide
-
-# End of https://www.toptal.com/developers/gitignore/api/python,pycharm,visualstudiocode
+*.pyc
+.idea/**
