--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build: .
     command: /start.sh
     volumes:
-      - ./:/app
+      - ./src:/app
     ports:
       - 8080:80
     environment:
