--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     environment:
       - MODULE_NAME=main
       - VARIABLE_NAME=app
-      - APP_MODULE=src.app.main:app
+      - APP_MODULE=main:app
       - HOST=0.0.0.0
       - PORT=80
       - LOG_LEVEL=debug
