--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 services:
   web:
     build: .
-    command: /start.sh
+    command: /start-reload.sh
     volumes:
       - ./src/app:/app
     ports:
