--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,8 @@ services:
     build: .
     command: /start-reload.sh
     volumes:
-      - ./src/app:/app
+      - app:./src/app:/app
+      - environment:/usr/local/bin/
     ports:
       - 8080:80
     environment:
@@ -14,3 +15,7 @@ services:
       - HOST=0.0.0.0
       - PORT=80
       - LOG_LEVEL=debug
+
+volumes:
+  app:
+  environment:
